--- a/src/app/about/about.page.html
+++ b/src/app/about/about.page.html
@@ -1,13 +1,17 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>about</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
+<ion-content [fullscreen]="true" class="ion-padding no-scroll-content ion-text-center" style="background-color: #aedcf4;">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">about</ion-title>
+      <ion-title size="large">About this app</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <div class="center-container">
+    <p>
+      This app was created by me for educational purposes.
+    </p>
+
+    <p>
+      I created this app for my programming course. I created it on 23rd January 2024.
+    </p>
+  </div>
 </ion-content>
