--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,22 +1,22 @@
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1" href="/tabs/tab1">
+    <ion-tab-button tab="main" href="/tabs/main">
       <ion-icon aria-hidden="true" name="globe-outline"></ion-icon>
       <ion-label>Main</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2" href="/tabs/tab2">
+    <ion-tab-button tab="explore" href="/tabs/explore">
       <ion-icon aria-hidden="true" name="rocket-outline"></ion-icon>
       <ion-label>Explore</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab3" href="/tabs/tab3">
+    <ion-tab-button tab="mybook" href="/tabs/mybook">
       <ion-icon aria-hidden="true" name="book-outline"></ion-icon>
       <ion-label>My Book</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab4" href="/tabs/tab4">
+    <ion-tab-button tab="about" href="/tabs/about">
       <ion-icon aria-hidden="true" name="help-outline"></ion-icon>
       <ion-label>About</ion-label>
     </ion-tab-button>
