--- a/src/app/main/main.page.scss
+++ b/src/app/main/main.page.scss
@@ -3,14 +3,27 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
+    height: 100vh;
+    background-color: #aedcf4; 
+    font-family: 'YourCustomFont', sans-serif; 
+  }
+  
+  .no-scroll-content {
+    --overflow: hidden;
+  }
+  
+  .center-container p {
+    text-align: center;
+    max-width: 80%;
+    margin: 15px 0;
+    color: #333;
   }
   
   ion-fab-button {
     --background: #b7f399;
     --background-activated: #87d361;
     --background-hover: #a3e681;
-    --border-radius: 15px;
+    --border-radius: 5px;
     --box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.3), 0px 1px 3px 1px rgba(0, 0, 0, 0.15);
     --color: black;
   }  
