navigate main button working

--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -17,13 +17,13 @@
       <ion-icon name="reorder-four-outline"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="bottom">
-      <ion-fab-button color="success">
+      <ion-fab-button color="success" (click)="goToExplorePage()">
         <ion-icon name="rocket-outline"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button color="success">
+      <ion-fab-button color="success" (click)="goToMyBookPage()">
         <ion-icon name="book-outline"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button color="success">
+      <ion-fab-button color="success" (click)="goToAboutPage()">
         <ion-icon name="help-outline"></ion-icon>
       </ion-fab-button>
     </ion-fab-list>
