--- a/src/app/explore/explore.page.html
+++ b/src/app/explore/explore.page.html
@@ -1,13 +1,21 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>explore</ion-title>
+    <ion-title>Explore new words!</ion-title>
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">explore</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-list>
+    <ion-input
+    type="text"
+    fill="solid"
+    label="Word:"
+    labelPlacement="floating"
+    helperText="Enter word"
+    [(ngModel)]="word"
+  ></ion-input>  </ion-list>  
+  <ion-item>
+    <ion-button expand="block"  (click)="searchWord()">Search</ion-button>
+  </ion-item>
 </ion-content>
