--- a/src/app/explore/explore.page.scss
+++ b/src/app/explore/explore.page.scss
@@ -1,21 +1,21 @@
-.no-scroll-content {
-    --overflow: hidden;
-  }
-  
-  .center-container {
+ion-content.center-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #aedcf4; 
-    font-family: 'YourCustomFont', sans-serif; 
   }
-  
+    
   .center-container p {
     text-align: center;
     max-width: 80%;
     margin: 15px 0;
-    color: #333;
   }
   
+  ion-button {
+    width: 100%;
+  }
+  ion-card {
+    background-color: aqua;
+    width: 90%;
+  }
