--- a/src/app/mybook/mybook.page.html
+++ b/src/app/mybook/mybook.page.html
@@ -1,16 +1,21 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>mybook</ion-title>
+    <ion-title>My Book</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">mybook</ion-title>
+      <ion-title size="large">My Book</ion-title>
     </ion-toolbar>
   </ion-header>
-
+  <ion-grid>
+    <ion-row>
+      <ion-col size="auto"><h1>List of searched words:</h1></ion-col>
+      <ion-col><ion-button (click)="refresh()" >Refresh</ion-button></ion-col>
+    </ion-row>
+  </ion-grid>
   <ion-list>
     <ion-item *ngFor="let klic of storedData">
       {{ klic }}
